--- a/summer2021/jordan/templates/jordan/navbar_base.html
+++ b/summer2021/jordan/templates/jordan/navbar_base.html
@@ -1,11 +1,9 @@
-{% load static %}
-<!doctype html>
-<html>
-  <head>
-    <title>This is the t</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+{% load static %} <!doctype html> <html> <head> <title>This is the t</title>
+<script
+src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript" src="
+{% static 'js/bootstrap.min.js' %}"></script> <script type="text/javascript"
+src="{% static 'js/bootstrap.js' %}"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
