--- a/summer2021/jordan/templates/jordan/navbar_base.html
+++ b/summer2021/jordan/templates/jordan/navbar_base.html
@@ -1,20 +1,24 @@
-{% load static %} <!doctype html> <html> <head> <title>This is the t</title>
-<script
-src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript" src="
-{% static 'js/bootstrap.min.js' %}"></script> <script type="text/javascript"
-src="{% static 'js/bootstrap.js' %}"></script>
+{% load static %} 
+<!doctype html> 
+<html> 
+<head> 
+    <title>This is the t</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script> 
+    <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'jordan/style.css' %}">
-
-    
-  </head>
+    <link rel="stylesheet" href="{% static 'jordan/style.css' %}">   
+</head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Young</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand mb-0 h1" href="#">
+        <img src="{% static 'image/Young_logo(2).jpg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+        Young
+
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,7 +33,7 @@ src="{% static 'js/bootstrap.js' %}"></script>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Work Experience & Personal Website
+              Work Experience & Personal Project
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Personal Projects</a>
