--- a/summer2021/jordan/templates/jordan/index.html
+++ b/summer2021/jordan/templates/jordan/index.html
@@ -3,16 +3,25 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the t</title>
+    
+    
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'jordan/style.css' %}">
+  {% block extrahead %}
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  {% endblock %}
   </head>
   <body>
     {% block body %}
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-
+    <script src="{% static 'js/test.js' %}"  type="text/javascript"></script>
+    <!-- ======= Hero Section ======= -->
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="hero-container" data-aos="fade-in">
+      <h1>Alex124 Smith</h1>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+    </div>
+    </section>
     {% endblock %}
   </body>
+  
+
 </html>   
