--- a/summer2021/jordan/templates/jordan/navbar_base.html
+++ b/summer2021/jordan/templates/jordan/navbar_base.html
@@ -2,14 +2,16 @@
 <!doctype html> 
 <html> 
 <head> 
-    <title>This is the t</title>
+    <title>JY's Neverland</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script> 
     <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'jordan/style.css' %}">   
+    
+    {% block extrahead %}
+    {% endblock %}   
 </head>
   <body>
 
@@ -37,9 +39,14 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Personal Projects</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Education</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Work Experience</a>
+              <a class="dropdown-item" href="#">Working Experience</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="https://github.com/Mike9557">GitHub Link</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="https://www.linkedin.com/in/jiarui-jordan-yang-45451811b/">Linkedin</a>
             </div>
           </li>
           <li class="nav-item">
@@ -52,6 +59,7 @@
         </form>
       </div>
     </nav>
+    <p> tes12522 </p>
     {% block body %}
     {% endblock %}
   </body>
